# hackathons

./: README.md
ecdsa-identity/: README.md
ecdsa-identity/contract/: Cargo.toml
ecdsa-identity/contract/src/: actions.rs  lib.rs
ecdsa-identity/host/: Cargo.toml
ecdsa-identity/host/src/: main.rs  utils.rs
identity-WebAuthn/host/src/: main.rs
metamask-identity/hyle-snap/: README.md
oidc-identity/: .env.example  Cargo.toml  README.md
oidc-identity/contract/: Cargo.toml
oidc-identity/contract/src/: jwt.rs  lib.rs
oidc-identity/host/: Cargo.toml  config.toml
oidc-identity/host/src/: config.rs  main.rs  oidc_client.rs
oidc-identity/methods/guest/: Cargo.toml
oidc-identity/methods/guest/src/: main.rs
oidc-identity/provider/: Cargo.toml
oidc-identity/provider/src/: lib.rs
