[package]
name = "oidc-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
bincode = { version = "2.0.0-rc.3" }
hyle_model = { git = "https://github.com/hyle-org/hyle", package = "hyle-model", tag = "v0.9.0", default-features = false }
